2015-09-04 Martin Grønholdt

* debug.c (db_hexdump): Fixed ifdef placement error.
* user_config.h (db_hexdump): Fixed ifdef placement error.
* slighttp/http-response.c (http_process_response): Fixed last call error handler, and CLF logging.
 
2015-09-03 Martin Grønholdt

* user_main.c (status_check): Added UDP status print.
			  (connected): Added captive portal in configuration mode.
* net/capport.*: Added files.
* net/dns.h: Added file.
* user_config.h: Added db_hexdump.
* debug.c: Added db_hexdump.

2015-09-02 Martin Grønholdt

* net/udp.*: Added files.
* slighttp/http.h: Set buffers to 1440 bytes.
* slighttp/http-tcp.c (tcp_disconnect_cb): Fixed bug where everything was not deallocated.
* slighttp/http_response.c (http_process_response): Only send on buffer full or done.
* handlers/fs/http-fs.c (http_fs_get_handler): Dynamic chunk size when reading file.


2015-09-01 Martin Grønholdt

* slighttp/http-tcp.c (tcp_disconnect_cb): Fixed maybe using NULL pointer.
* fs/int_flash.h: Removed FS_ADDR.
			    : Added fs_addr.
* fs/int_flash.c (aflash_read): Use fs_addr. 
* fs/zip.c (init_zip): Automaticly find file system offset in flash.
* slighttp/http.h: Upped version to 0.0.6.
* user_config.h: Upped version to 0.0.4.
* handlers/rest/net-names.c (scan_done_cb): Only deallocate old scan data once.
* fs/index.html: Check status after PUT request has returned.


2015-08-29 Martin Grønholdt

* handlers/rest/*: Reworked for the new handler code.
* slighttp/http-tcp.c (tcp_recv_cb): Keep processing response until done.
* slighttp/http-handler.c (http_add_handler): Fixed URI allocation size.
						  (http_get_handler): Added strict search.


2015-08-28 Martin Grønholdt


* Makefile: Added handlers directory to MODULES.
* handlers/rest/network.c: Reworked for the new handler code.
* rest/*: Moved to handlers/rest.
* slighttp/http-fs.*: Moved to handler/fs.
* slighttp/http-response.c (http_process_response): Eliminated some stuff.